# synthahol-babylon

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml
src/: effect.rs  lib.rs
tests/: envelope_curve-ae3-de4-rl1-1.0.3.bab  envelope_curve-ap3-dd1-rd2-1.0.3.bab  envelopes-1.0.2.bab  init-1.0.2.bab  init-1.0.4.bab  master-volume--398-1.0.3.bab  master-volume--97-1.0.3.bab  master-volume--inf-1.0.3.bab  master-volume-10-1.0.3.bab  playmode-cheat1-1.0.2.bab  unison-9voices-1.0.2.bab
tests/effects/: delay-band_pass_1000-1.0.4.bab  delay-band_pass_150-1.0.4.bab  delay-high_pass_250-1.0.4.bab  delay-low_pass_200-1.0.4.bab  delay-ping_pong_off-1.0.2.bab  delay-ping_pong_on-1.0.2.bab  delay-time1t-hp100-ping_pong-1.0.3.bab  delay-time504-syncoff-1.0.3.bab  delay-timehalf-lp200-1.0.3.bab  delay-timesixteenth-bp3000-1.0.3.bab  distortion-gain5-1.0.3.bab  effect-order-reversed-1.0.2.bab  equalizer-l-10-m5-h-10-1.0.3.bab  filter-bandpass-1.0.2.bab  filter-highpass-1.0.2.bab  filter-notch-1.0.2.bab  filter-peak-1.0.2.bab  reverb-r100-w0-d50-m34-hp400-1.0.3.bab
tests/waveforms/: waveforms-formanta1-svoice1-organ1-1.0.3.bab  waveforms-gritty1-gate1-sinefmkick12-1.0.3.bab  waveforms-sine-triangle-saw-1.0.3.bab  waveforms-square-pulse-voice1-1.0.3.bab
