# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "synthahol-babylon"
version = "0.3.1"
edition = "2021"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
description = "Read presets for the Babylon synthesizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/softdevca/synthahol-babylon"
repository = "https://github.com/softdevca/synthahol-babylon"
keywords = ["audio", "synth", "patch", "preset", "babylon"]
publish = true 

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
strum = "0.24"
strum_macros = "0.24"
uom = { version = "0.34", default-features = false, features = ["f64", "si", "std"] }

[dev-dependencies]
approx = "0.5"

